--- a/src/pages/InvestorView/ValidateOneLink/ValidateOneLink.scss
+++ b/src/pages/InvestorView/ValidateOneLink/ValidateOneLink.scss
@@ -39,7 +39,7 @@
     flex: 1;
     margin-left: 210px;
     transition: margin-left 0.3s ease;
-    margin-top: 5%;
+    margin-top: 10%;
     overflow: hidden;
   }
 
@@ -96,7 +96,7 @@
 
 @media (max-width: 468px) {
   .investor_view_container {
-    background-color: white;
+    background-color: #f9faf3;
     .sidebar {
       left: 0;
       bottom: 0;
